hugr-llvm/src/extension/snapshots/hugr_llvm__extension__float__test__const_float@pre-mem2reg@llvm14.snap
---
source: src/extension/float.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define double @_hl.main.1() {
alloca_block:
  %"0" = alloca double, align 8
  %"5_0" = alloca double, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store double 3.120000e+00, double* %"5_0", align 8
  %"5_01" = load double, double* %"5_0", align 8
  store double %"5_01", double* %"0", align 8
  %"02" = load double, double* %"0", align 8
  ret double %"02"
}
