hugr-llvm/src/extension/snapshots/hugr_llvm__extension__float__test__feq@pre-mem2reg@llvm14.snap
---
source: src/extension/float.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i32, {}, {} } @_hl.main.1(double %0, double %1) {
alloca_block:
  %"0" = alloca { i32, {}, {} }, align 8
  %"2_0" = alloca double, align 8
  %"2_1" = alloca double, align 8
  %"4_0" = alloca { i32, {}, {} }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store double %0, double* %"2_0", align 8
  store double %1, double* %"2_1", align 8
  %"2_01" = load double, double* %"2_0", align 8
  %"2_12" = load double, double* %"2_1", align 8
  %2 = fcmp oeq double %"2_01", %"2_12"
  %3 = select i1 %2, { i32, {}, {} } { i32 1, {} poison, {} undef }, { i32, {}, {} } { i32 0, {} undef, {} poison }
  store { i32, {}, {} } %3, { i32, {}, {} }* %"4_0", align 4
  %"4_03" = load { i32, {}, {} }, { i32, {}, {} }* %"4_0", align 4
  store { i32, {}, {} } %"4_03", { i32, {}, {} }* %"0", align 4
  %"04" = load { i32, {}, {} }, { i32, {}, {} }* %"0", align 4
  ret { i32, {}, {} } %"04"
}
