hugr-llvm/src/extension/snapshots/hugr_llvm__extension__float__test__fneg@pre-mem2reg@llvm14.snap
---
source: hugr-llvm/src/extension/float.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define double @_hl.main.1(double %0) {
alloca_block:
  %"0" = alloca double, align 8
  %"01" = alloca double, align 8
  %"2_0" = alloca double, align 8
  %"4_0" = alloca double, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store double %0, double* %"0", align 8
  %"02" = load double, double* %"0", align 8
  store double %"02", double* %"2_0", align 8
  %"2_03" = load double, double* %"2_0", align 8
  %"2_04" = load double, double* %"2_0", align 8
  %1 = fneg double %"2_04"
  store double %1, double* %"4_0", align 8
  %"4_05" = load double, double* %"4_0", align 8
  store double %"4_05", double* %"01", align 8
  %"06" = load double, double* %"01", align 8
  ret double %"06"
}
